[fix] createRecord(#73)